--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ baseurl: ''
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: de-DE
 
 # Additional parameters for datetime localization, optional. › https://github.com/iamkun/dayjs/tree/dev/src/locale
 prefer_datetime_locale:
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Europe/Berlin
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -32,10 +32,10 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://docs.computerei.de'
 
 github:
-  username:              # change to your github username
+  username: Computerei             # change to your github username
 
 twitter:
-  username:             # change to your twitter username
+  username: Computerei            # change to your twitter username
 
 social:
   # Change to your full name.
@@ -83,7 +83,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://lirp.cdn-website.com/45c77ab3/dms3rep/multi/opt/Computerei_Logo_WIT_A4-01-729w.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
@@ -141,7 +141,7 @@ defaults:
       type: posts
     values:
       layout: post
-      comments: true    # Enable comments in posts.
+      comments: false    # Enable comments in posts.
       toc: true         # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
